# ChangeLog for media-gfx/cds-themes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cds-themes-10.0.1 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cds-themes-10.0.1.ebuild:
  Version bump. Add update boot splash.

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cds-themes-10.0.ebuild:
  Themes for Calculate Directory Server 10.0 moved from calculate-cds-themes