@@ -1,7 +1,9 @@
 DIST cds-themes-10.0.tar.bz2 277813 RMD160 0d8bfaf3ae8c43e175a19153cff0077d60a5b1bd SHA1 a537c4bf88776856a48c9de7616ac1bfd4a2fc34 SHA256 e4ee1aa46435a46f7aa95a0fb3dc068997076fa412e2f0a364ca086a29c1b579
 DIST cds-themes-10.2.tar.bz2 277918 RMD160 ffcbe45b2d875b08064462fcf96f80c97ffe3c25 SHA1 34bd453aca51247d90230d165e0e34bff26fcac9 SHA256 39260d28d31ab17e749b8a8bb6d7c7ef66be71f6b2155f1ae27f5ed4f28e5c92
+DIST cds-themes-10.4.tar.bz2 277827 RMD160 e0b64b81510a35c65979bdc3840bdac7305b1131 SHA1 5dff122ce51ccb7f66cc336448a6967e256edb4d SHA256 d7fca3cf6feb585df44f2423ec252d6614bb3aaeab7b8f566c3c7fdd9702bebb
 EBUILD cds-themes-10.0.1.ebuild 625 RMD160 588c11635f88799ed0dec1341120efa80ba9a6ad SHA1 1848f6360baf139700e436064be9fd295b443fc6 SHA256 67e34552419770160fcfd6ee246edb9a7413b106c16a299c4516a40d04554884
 EBUILD cds-themes-10.0.ebuild 473 RMD160 4861a4c8867b53f17866395f1a9a67ae5fa75e70 SHA1 f4d4405ba31d749fb602f1987e72d6f749490ca5 SHA256 cfd5bdde1398569dbea7d6799f0a6d778f8772d5570c3e83574a143753a9ab98
 EBUILD cds-themes-10.2-r1.ebuild 686 RMD160 52c22fa4f06464ef0323f03c86b65e09ad69cd9f SHA1 13c087c61ef9a4fad03b154e32f0a741ae603520 SHA256 90b23a9ad1b898ffc607fadec3c2e0a4d2e518ef53bd21096613d8f4022f8a69
-MISC ChangeLog 448 RMD160 20431a4e50d0c60bfaa5b8caabd0b96ab21eee2a SHA1 75cb2ba4000a667a267e1a908673c4f6dcb46aaa SHA256 ebbcffbf9a5e8d94080f9e07c4b16e5983b567695a1afd0ee52e9aa752253940
+EBUILD cds-themes-10.4.ebuild 686 RMD160 5a5c43190bd1c838b5a014d56012e8e01423fb23 SHA1 1fae06b06ed7f5792c2e80cbadee63246edc8d81 SHA256 d3f0db67945c69438be8930395994433d14da5da037f1994d505f2ba28de2f94
+MISC ChangeLog 584 RMD160 b35ab4d869b1ddcbc68186fdbdc4aa0c38e1ab3e SHA1 8aa3296f570ced39dacebd9485ad483c0a28e3f5 SHA256 45d00a730a92f62f15a1edc7686cb0c76c8340115824505dff3e12ee5e400ffb
 MISC metadata.xml 259 RMD160 1b270d593092c8aa933eee383cc7faba8c979b88 SHA1 f11a78e0617a73b31ae83fa0689ccf35123ccd67 SHA256 a48a8a79d95d6ff3534bee46a101bfc3b38c25e4d3c72e336c7e8388616d9a91
