@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/cds-themes
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cds-themes-10.4 (01 Apr 2010)
+
+  01 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cds-themes-10.4.ebuild:
+  Bump version.
 
 *cds-themes-10.0.1 (11 Dec 2009)
 
